--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://jamesquietly.github.io/youtube-player-site/",
+  "homepage": "https://jamesquietly.github.io/youtube-player/",
   "devDependencies": {
     "gh-pages": "^1.0.0"
   }
